--- a/ARIAR_PayrollSystem/Properties/Resources.resx
+++ b/ARIAR_PayrollSystem/Properties/Resources.resx
@@ -190,6 +190,9 @@
   <data name="database_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\database_logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="lock-2-line" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lock-2-line.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="search_logo_alternative" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\search_logo_alternative.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -201,6 +204,9 @@
   </data>
   <data name="keyboard_arrow_right_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\keyboard_arrow_right_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="checkbox-circle-fill" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\checkbox-circle-fill.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="logout_logo1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logout_logo1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -223,7 +229,7 @@
   <data name="group_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\group_logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="lock-2-line" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\lock-2-line.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="checkbox-circle-fill (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\checkbox-circle-fill (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
