--- a/ARIAR_PayrollSystem/Forms/Report.resx
+++ b/ARIAR_PayrollSystem/Forms/Report.resx
@@ -117,4 +117,47 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="guna2Button7.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACMAAAAjCAYAAAAe2bNZAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAHKSURBVFhHzZixbcMwEEUNwwO4C+ARvIALD6DGW7h1kQkyRgbIBmlTZ4dU6dOmD+D8J5CBIH2b
+        pEDGPuBBwunu65sibdGL7vFwN9jkrbDJyPl83oid2BewFUunl8ImQYKYeBEfhbwJTBUbskkJMSKvgvgJ
+        x9ygfpYhm5QIo/IpiC+BeIp38S2IWYZsUgKdwASBKPPgIQE98QMQxYZsUs1DMzyutasbohpGkzkzjmxD
+        NqnGmmayR8gm1VTTDJFlyCbVUNsMMTS0chqTBKi4hRkiGto6jUkCVDzHDCuO5U2fAyME553TmCSA4tBE
+        5JpZCwwxQmPQwyjR3gyozk5O+oMO8T9mLkF/0CHqmdH5Uqwy+Bslndc3oyNz4qmAftXo2MTMUZBnZaSg
+        7hj6mpohnIEI0dwMjwlDpwyoa/eYwrW7mcDcBOFc+t+gcF7dDD9yzwXsQ18TM8yF+GqZCupOoa+JGSYl
+        r5bcKAV1TVcTuwau5bIJffXNDK6zoq4yqq9mpn8ZEm5HkAv96BDFZngHKd03pYgfDt2du+8kASoe7ihr
+        B7r9XBozSUTUwHfKnL32NdDrv3scNglqYiLO+RfiEuigV7ZVuRU2eRsOi1+q8fPPJUsteAAAAABJRU5E
+        rkJggg==
+</value>
+  </data>
+  <data name="guna2Button2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACMAAAAjCAYAAAAe2bNZAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAHKSURBVFhHzZixbcMwEEUNwwO4C+ARvIALD6DGW7h1kQkyRgbIBmlTZ4dU6dOmD+D8J5CBIH2b
+        pEDGPuBBwunu65sibdGL7vFwN9jkrbDJyPl83oid2BewFUunl8ImQYKYeBEfhbwJTBUbskkJMSKvgvgJ
+        x9ygfpYhm5QIo/IpiC+BeIp38S2IWYZsUgKdwASBKPPgIQE98QMQxYZsUs1DMzyutasbohpGkzkzjmxD
+        NqnGmmayR8gm1VTTDJFlyCbVUNsMMTS0chqTBKi4hRkiGto6jUkCVDzHDCuO5U2fAyME553TmCSA4tBE
+        5JpZCwwxQmPQwyjR3gyozk5O+oMO8T9mLkF/0CHqmdH5Uqwy+Bslndc3oyNz4qmAftXo2MTMUZBnZaSg
+        7hj6mpohnIEI0dwMjwlDpwyoa/eYwrW7mcDcBOFc+t+gcF7dDD9yzwXsQ18TM8yF+GqZCupOoa+JGSYl
+        r5bcKAV1TVcTuwau5bIJffXNDK6zoq4yqq9mpn8ZEm5HkAv96BDFZngHKd03pYgfDt2du+8kASoe7ihr
+        B7r9XBozSUTUwHfKnL32NdDrv3scNglqYiLO+RfiEuigV7ZVuRU2eRsOi1+q8fPPJUsteAAAAABJRU5E
+        rkJggg==
+</value>
+  </data>
+  <data name="AddEmployeeButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACMAAAAjCAYAAAAe2bNZAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAHKSURBVFhHzZixbcMwEEUNwwO4C+ARvIALD6DGW7h1kQkyRgbIBmlTZ4dU6dOmD+D8J5CBIH2b
+        pEDGPuBBwunu65sibdGL7vFwN9jkrbDJyPl83oid2BewFUunl8ImQYKYeBEfhbwJTBUbskkJMSKvgvgJ
+        x9ygfpYhm5QIo/IpiC+BeIp38S2IWYZsUgKdwASBKPPgIQE98QMQxYZsUs1DMzyutasbohpGkzkzjmxD
+        NqnGmmayR8gm1VTTDJFlyCbVUNsMMTS0chqTBKi4hRkiGto6jUkCVDzHDCuO5U2fAyME553TmCSA4tBE
+        5JpZCwwxQmPQwyjR3gyozk5O+oMO8T9mLkF/0CHqmdH5Uqwy+Bslndc3oyNz4qmAftXo2MTMUZBnZaSg
+        7hj6mpohnIEI0dwMjwlDpwyoa/eYwrW7mcDcBOFc+t+gcF7dDD9yzwXsQ18TM8yF+GqZCupOoa+JGSYl
+        r5bcKAV1TVcTuwau5bIJffXNDK6zoq4yqq9mpn8ZEm5HkAv96BDFZngHKd03pYgfDt2du+8kASoe7ihr
+        B7r9XBozSUTUwHfKnL32NdDrv3scNglqYiLO+RfiEuigV7ZVuRU2eRsOi1+q8fPPJUsteAAAAABJRU5E
+        rkJggg==
+</value>
+  </data>
 </root>
